# batch-gaac-s3

./: .gitignore  README.md  batch_gaac_s3.py  batch_gaac_s3_config_test.yml  batch_plot_s3_indices.py  batch_wq.py  pyproject.toml  wq_algorithms_arctic_olci.html  wq_config.yml
wq_retrieve/: __init__.py  aggregator.py  config.py  io.py  processor.py  registry.py  scene.py
wq_retrieve/algorithms/: __init__.py  base.py  cdom.py  chla.py  spm.py  turbidity.py
